Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -39,9 +39,9 @@
         \item Justify the significance of specific language design principles.
         \item Give examples of considerations that API and designers should be aware of.
         \item Evaluate language features and designs against the language design principles we've discussed in the course, applying your own judgement.
-        \item \sout{Design and run user studies to evaluate design questions empirically.}
-        \item \sout{Reflect on user feedback to identify potential root causes of any difficulties.}
-        \item \sout{Address these root problems with appropriate redesign ideas.}
+        \item Design and run user studies to evaluate design questions empirically.
+        \item Reflect on user feedback to identify potential root causes of any difficulties.
+        \item Address these root problems with appropriate redesign ideas.
         \item \sout{Implement evaluation methods for an AST (or similar data structures)}.
         \item Contrast the two evaluation approaches here (AST methods vs. Visitors).
         \item Judge when AST functionality should be refactored using the Visitor Pattern.
@@ -207,6 +207,22 @@ Example: L2 (5-13)
     \begin{itemize}
         \item Avoid overly specific features.
         \item Useful abstractions to reduce duplication.
+    \end{itemize}
+\end{itemize}
+
+\subsection{Prototype Testing}
+
+\begin{itemize}
+    \item Process
+    \begin{itemize}
+        \item Initial design.
+        \begin{itemize}
+            \item Purpose.
+            \item Examples.
+        \end{itemize}
+        \item User testing.
+        \item Interpret user feedback.
+        \item Improve and then try again.
     \end{itemize}
 \end{itemize}
 
