--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[a4paper, total={6in, 8in}]{geometry}
 
+\usepackage{hyperref}
 \usepackage[normalem]{ulem}
 \usepackage{graphicx}
 \usepackage{float}
