Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,6 @@
 \usepackage[a4paper, total={6in, 8in}]{geometry}
 
 \usepackage{hyperref}
-\usepackage[normalem]{ulem}
 \usepackage{graphicx}
 \usepackage{float}
 
@@ -26,12 +25,12 @@
 \begin{itemize}
     \item Domain Specific Languages (DSLs)
     \begin{enumerate}
-        \item \sout{Differentiate Domain Specific Languages (DSLs) from general-purpose programming languages and libraries, and motivate their usefulness.}
-        \item \sout{Design a DSL tailored to assist a target kind of user with specific task.}
-        \item \sout{Implement a DSL simply, providing clear and suitably-robust error handling.}
-        \item \sout{Evaluate a language design's effectiveness via user studies, and incorporate user feedback by processing revisions to a language design.}
-        \item \sout{Compare DSL motivations and justify which you find appropriate (or not).}
-        \item \sout{Judge how useful you find a particular DSL design for a given task/user, identifying and estimating the significance of any weaknesses.}
+        \item Differentiate Domain Specific Languages (DSLs) from general-purpose programming languages and libraries, and motivate their usefulness.
+        \item Design a DSL tailored to assist a target kind of user with specific task.
+        \item Implement a DSL simply, providing clear and suitably-robust error handling.
+        \item Evaluate a language design's effectiveness via user studies, and incorporate user feedback by processing revisions to a language design.
+        \item Compare DSL motivations and justify which you find appropriate (or not).
+        \item Judge how useful you find a particular DSL design for a given task/user, identifying and estimating the significance of any weaknesses.
         \item Describe the key stages of a typical DSL implementation, including their roles.
         \item Explain trade-offs regarding whether to have particular phases do more or less work (e.g. fine-grained tokenization, grammar precision, validation).
         \item Propose a suitable tokenization for given input examples in a given language.
@@ -43,11 +42,11 @@
         \item Design and run user studies to evaluate design questions empirically.
         \item Reflect on user feedback to identify potential root causes of any difficulties.
         \item Address these root problems with appropriate redesign ideas.
-        \item \sout{Implement evaluation methods for an AST (or similar data structures)}.
+        \item Implement evaluation methods for an AST (or similar data structures).
         \item Contrast the two evaluation approaches here (AST methods vs. Visitors).
         \item Judge when AST functionality should be refactored using the Visitor Pattern.
         \item Explain how the Visitor pattern simulates double-dispatch, and why double dispatch is important for the user (and reuse) of the pattern.
-        \item \sout{Choose when to use appropriate extensions of the underlying design patterns.}
+        \item Choose when to use appropriate extensions of the underlying design patterns.
         \item Give examples of a variety of attributes that may be bound to identifiers.
         \item Differentiate between attributes which are statically and dynamically bound.
         \item Implement language support for standard variable operations.
@@ -69,11 +68,11 @@
     \begin{enumerate}
         \setcounter{enumi}{34}
         \item Differentiate the main types of program analysis, comparing their potential applications, strengths, and weaknesses.
-        \item \sout{Design program analyses to extract and synthesise information to aid programmers with their daily work.}
-        \item \sout{Implement simple program analyses and visualizations of their results.}
-        \item \sout{Create useful visualizations of programming-related data.}
-        \item \sout{Justify the likely usefulness of program analyses and visualizations.}
-        \item \sout{Evaluate particular program analyses/visualizations using empirical studies.}
+        \item Design program analyses to extract and synthesise information to aid programmers with their daily work.
+        \item Implement simple program analyses and visualizations of their results.
+        \item Create useful visualizations of programming-related data.
+        \item Justify the likely usefulness of program analyses and visualizations.
+        \item Evaluate particular program analyses/visualizations using empirical studies.
         \item Categorise analyses according to the main types presented here, justifying which are necessary/useful for which tasks.
         \item Contrast the pros and cons of raw-data vs. static program analyses, in situations where either could be applicable.
         \item Describe the high-level implementation strategies for making large-scale static/meta-property analyses efficient.
@@ -96,8 +95,8 @@
     \begin{enumerate}
         \setcounter{enumi}{57}
         \item Explain the key things to look for when skim-reading a research paper.
-        \item \sout{Apply your knowledge of empirical evaluation techniques to critically evaluate the evidence provided in a research paper.}
-        \item \sout{Create short, high-level, summaries of the main points of a research paper.}
+        \item Apply your knowledge of empirical evaluation techniques to critically evaluate the evidence provided in a research paper.
+        \item Create short, high-level, summaries of the main points of a research paper.
     \end{enumerate}
 \end{itemize}
 
@@ -110,9 +109,7 @@
     \begin{itemize}
         \item L2 (13)
         \item L2 (15)
-        \item A1 (2)
         \item A1 (3)
-        \item A1 (4)
         \item A1 (5)
     \end{itemize}
 \end{itemize}
@@ -147,6 +144,7 @@
         \item Or do the parsing separately from the AST.
         \item Examples
         \begin{itemize}
+            \item A1 (4)
             \item tinyHTML
             \item tinyDotStarter-parsingCompleted
         \end{itemize}
@@ -321,6 +319,7 @@ Example: L2 (5-13)
 \begin{itemize}
     \item L5 (11-26)
     \item tinyVars-UndefAlias
+    \item tinVars-A2-solution
 \end{itemize}
 
 \subsection{What Could Be Checked Statically/Dynamically?}
@@ -409,6 +408,11 @@ L7 (5-13)
     \begin{itemize}
         \item Analysis and Discussion $\rightarrow$ Answers?
         \item Are our conclusions justiﬁed in general?
+    \end{itemize}
+    \item Examples
+    \begin{itemize}
+        \item A3 (1)
+        \item A3 (2)
     \end{itemize}
 \end{itemize}
 
