Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -102,7 +102,7 @@
 
 \section{Domain Specific Languages}
 
-\subsection{EBNF}
+\subsection{Grammar Design}
 
 \begin{itemize}
     \item Examples
@@ -171,8 +171,6 @@
         \item Execute program directly (DSL interpreter), or generate code to be run externally (DSL compiler).
     \end{itemize}
 \end{itemize}
-
-Example: L2 (5-13)
 
 \subsection{Language Design Principles}
 
@@ -319,7 +317,7 @@ Example: L2 (5-13)
 \begin{itemize}
     \item L5 (11-26)
     \item tinyVars-UndefAlias
-    \item tinVars-A2-solution
+    \item tinyVars-A2-solution
 \end{itemize}
 
 \subsection{What Could Be Checked Statically/Dynamically?}
